2004-09-28 Magnus Hagdorn
 * CF_loadfile.py: made CFchecklist public, fixed ice vol/area calculations to ignore missing data
 * CF_options.py: can select a profile without selecting variable
 * CF_profile.py: added method to extract ice extent along profile
 * plotEISMINT.py: added GPL license
 * plotCFstats.py: new program to plot time series of model statistics 
 * setup.py: handle plotCFstats.py
	
2004-09-17 Magnus Hagdorn
 * added glide launcher
 * added super EISMINT plotter

2004-09-16 Magnus Hagdorn
 * CF_colourmap.py: need to find min max of field by hand so we honour the NC_FILL_VALUE
 * CF_options.py: coordinates should be list rather than tuples
 * CF_profile.py: linearly interpolate vertical layers for each column
 * CF_utils.py: add linear interpolation routine
 * temp.cpt, mb.cpt: change background and foreground to white

2004-08-26 Magnus Hadorn
 * CF_area.py: we can now also plot profile lines
 * CF_loadfile.py: add methods to calculate ice area and volume
 * CF_profile.py: we can now load 2D profiles (e.g. temperatures etc)
   this does not quite work yet because we use triangulate which will interpolate
   data outside ice sheet
 * CF_profilearea.py: simple plotting area for profiles
 * CF_timeseries.py: use new AutoXY API
 * __init__.py: added CF_profilearea.py
 * create_topo.py: we can now also specify upper right corner
 * plotProfile.py: use CF_profilearea.py
 * plotSpot.py: use new AutoXY API
 * temp.cpt: NaN nodes set to white
	
2004-08-20 Magnus Hagdorn
 * plotProfile.py works now

2004-08-20 Magnus Hagdorn
 * start of profile stuff

2004-08-09 Magnus Hagdorn
 * added new program to plot variables at a single location (plotSpot.py, setup.py)
 * added non-geographic projection (CF_area.py, CF_file.py 
 * CF_file.py: added property for grid spacing
 * new method to extract data at a single node (CF_loadfile.py)
 * CF_options.py: added spots, homologous temperature, level selection
 * plotCFvar.py: added level selection
	